# fulldoc

./: .gitignore  .readthedocs.yaml  Makefile  README.md  debug.py  pyproject.toml  test.py  test_module.py
.github/scripts/: parse_version.py  parse_versions.py
.github/workflows/: lint.yml  lint_build.yml  publish.yml
docs/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  rules.rst  status-codes.rst
docstrings_parser/: __init__.py  config.py  entities.py  exceptions.py  project.py  readme.py  readme_generator.py  types.py  utils.py
docstrings_parser/entities/: entities.py  functions.py  module.py
docstrings_parser/objects/: classes.py  functions.py  module.py
docstrings_parser/parsers/: __init__.py  docstrings.py  type_annotation.py
docstrings_parser/scripts/: check_docstrings.py  generate.py
fulldoc/: __init__.py  common.py  config.py  exceptions.py  logger.py  project.py  readme.py  script.py  utils.py
fulldoc/parsers/: __init__.py  basic.py  classes.py  docstrings.py  entities.py  functions.py  imports.py  modules.py
fulldoc/readme/: basic.py  library.py
fulldoc/readme/library_data/: conf.py
fulldoc/scripts/: generate.py
fulldoc_local/: __init__.py  config.py  exceptions.py  logger.py  project.py  script.py  utils.py
fulldoc_local/parsers/: entities.py
fulldoc_local/readme/: basic.py  library.py
fulldoc_local/readme/library_data/docs/: conf.py
readme_generator/: exceptions.py  logger.py  utils.py
readme_generator/objects/: classes.py  functions.py  module.py  objects.py
readme_generator/parsers/: __init__.py  docstrings.py
readme_generator/scripts/: check_docstrings.py
