[project]
name = 'docstrings-parser'
version = '0.0.2.a4'
authors = [
    {name = 'Maksim Ermoshin', email = 'maksim_ermoshin@mail.ru'},
]
description = 'Library for automatic docstrings check and readme generation'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    'treelib',
    'tomli',
    'dominate',
]
[project.optional-dependencies]
style = [
    'black',
    'flake8',
    'flake8-commas',
    'flake8-docstrings',
    'flake8-print',
    'flake8-pyproject',
    'flake8-quotes',
    'isort',
    'mypy',
]

[project.scripts]
generate-readme = 'docstrings_parser.scripts.generate:generate_readme'
check-docstrings = 'docstrings_parser.scripts.check_docstrings:check_docstrings'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.package-data]
'readme_generator' = ['py.typed']

[tool.isort]
profile = 'black'
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
ignore = ['W503']
exclude = ['venv/', 'env/', 'temp/', 'build/']
max-line-length = 120
max-complexity = 15

[tool.mypy]
python_version = '3.14'
exclude = ['venv', 'temp']
explicit_package_bases = true
disallow_untyped_defs = true
