[project]
name = 'fulldoc'
version = '0.0.2.a7'
authors = [
    {name = 'Maksim Ermoshin', email = 'maksim_ermoshin@mail.ru'},
]
description = 'Library for automatic docstrings check and readme generation'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    'treelib',
    'dominate',
    'pandas',
    'tabulate',
]
[project.optional-dependencies]
style = [
    'black',
    'flake8',
    'flake8-commas',
    'flake8-docstrings',
    'flake8-print',
    'flake8-pyproject',
    'flake8-quotes',
    'isort',
    'mypy',
    'pandas-stubs',
]
doc = [
    'sphinx-pyproject',
]

[project.scripts]
fulldoc = 'fulldoc.script:fulldoc'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.package-data]
'fulldoc' = ['py.typed']
'fulldoc.readme.library_data' = ['.readthedocs.yaml']
'fulldoc.readme.library_data.docs' = ['index.rst']

[tool.setuptools.package-dir]
fulldoc = 'fulldoc_local'

[tool.isort]
profile = 'black'
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
ignore = ['W503']
exclude = ['venv/', 'env/', 'temp/', 'build/']
per-file-ignores = [
    '.github/scripts/*: T201',
]
max-line-length = 120
max-complexity = 15

[tool.mypy]
python_version = '3.14'
exclude = ['venv', 'temp', 'build']
disallow_untyped_defs = true
