[project]
name = 'fulldoc'
version = '0.0.2.b1'
authors = [
    { name = 'Maksim Ermoshin', email = 'maksim.ermoshin2000@gmail.com' },
]
description = 'Library for automatic docstrings check'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    "dominate>=2.9.1",
    "gitpython>=3.1.47",
    "pandas>=3.0.2",
    "tabulate>=0.10.0",
    "treelib>=1.8.0",
]

[project.optional-dependencies]
lint = ["mypy>=1.20.2", "pandas-stubs>=3.0.0.260204", "ruff>=0.15.12"]
doc = ["furo>=2025.12.19", "sphinx>=9.1.0", "sphinx-pyproject>=0.3.0"]

[project.scripts]
fulldoc = 'fulldoc.script:fulldoc'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.package-data]
'fulldoc' = ['py.typed']

[tool.ruff]
line-length = 120
target-version = "py314"
unsafe-fixes = true
exclude = ['tests/']

[tool.ruff.lint]
preview = true
select = [
    "ANN", # type annotations
    "B",   # potential bugs
    "S",   # potential vulnerabilities
    "E",   # pycodestyle errors
    "I",   # sort imports
    "F",   # pyflakes errors
    "COM", # commas
    "T2",  # print
    "DOC", # docstring content
    "D",   # docstring
    "UP",  # update imports and code style according to python version
    "Q",   # quotes
    "C9",  # complexity
    "C4",  # comprehensions
    "RUF", # ruff special codes
    "PTH", # use pathlib instead of os
    "PD",  # pandas
    "N",   # naming convention
]
fixable = ["ALL"]
ignore = [
    "D413",   # blank line after last docstring section
    "COM812", # missing trailing comma
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 18


[tool.mypy]
disallow_untyped_defs = true
disallow_any_explicit = true
disallow_untyped_decorators = true
enable_error_code = ['deprecated']
exclude = ["build/"]
